--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+
+
+**/.mvn
+**/mvnw.cmd
+**/mvnw
+**/target/
+**/.gitignore
+.idea
+
