微服务配置，远程调用

--- a/skymall-member/src/main/resources/application.yml
+++ b/skymall-member/src/main/resources/application.yml
@@ -20,3 +20,12 @@ mybatis-plus:
       id-type: auto
 server:
   port: 8000
+
+
+spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: skymall-member
