--- a/skymall-order/src/main/resources/application.yml
+++ b/skymall-order/src/main/resources/application.yml
@@ -20,3 +20,11 @@ mybatis-plus:
       id-type: auto
 server:
   port: 9000
+
+spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: skymall-order
