--- a/skymall-product/src/main/resources/application.yml
+++ b/skymall-product/src/main/resources/application.yml
@@ -19,4 +19,12 @@ mybatis-plus:
     db-config:
       id-type: auto
 server:
-  port: 10000
+  port: 10001
+
+spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: skymall-product
