--- a/skymall-common/pom.xml
+++ b/skymall-common/pom.xml
@@ -59,7 +59,7 @@
             <version>2.6</version>
             <scope>compile</scope>
         </dependency>
-<!--nocos 服务发现-->
+<!--nacos 服务发现-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
