--- a/skymall-common/pom.xml
+++ b/skymall-common/pom.xml
@@ -59,10 +59,22 @@
             <version>2.6</version>
             <scope>compile</scope>
         </dependency>
-<!--nacos 服务发现-->
+
+        <!--nacos 服务的注册/发现-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+<!--        nacos 配置中心来做配置管理-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+            <version>3.0.0</version>
         </dependency>
 
         <dependency>
