--- a/skymall-coupon/src/main/resources/application.properties
+++ b/skymall-coupon/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/skymall_sms?useUnicode=true&ch
 spring.datasource.username=root
 # 配置数据库密码
 spring.datasource.password=root
+
+
+#配置中心测试数据
+coupon.user.name=zhangsan
+coupon.user.age=20
