--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -52,6 +52,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.skylike</groupId>
+			<artifactId>skymall-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
